--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.2",
-    "dotenv": "^4.0.0",
-    "express": "^4.16.2",
-    "express-validator": "^4.3.0",
+    "body-parser": "^1.18.3",
+    "dotenv": "^6.0.0",
+    "express": "^4.16.3",
+    "express-validator": "^5.3.0",
     "http-auth": "^3.2.3",
-    "mongoose": "^4.13.9",
-    "pug": "^2.0.0-rc.4"
+    "mongoose": "^5.2.13",
+    "pug": "^2.0.3"
   },
   "devDependencies": {
-    "nodemon": "^1.14.10"
+    "nodemon": "^1.18.4"
   }
 }
